Fix resume on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -391,5 +391,6 @@ textarea:focus ~ .bar:before, textarea:focus ~ .bar:after {
 
 #resume iframe {
   width: 1000px;
+  max-width: 100%;
   height: 1030px;
 }
